[package]
name = "staartstuk-controller"
version = "0.1.0"
edition = "2024"

[features]
default = [ "log" ]
defmt = [ "dep:defmt", "defmt-or-log/defmt" ]
log = [ "dep:log", "defmt-or-log/log" ]

[dependencies]
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", rev = "45797ecb8501d7a22c53967fad45ee7490424991", features = [ "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt" ] }
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", rev = "45797ecb8501d7a22c53967fad45ee7490424991", features = [ "defmt", "defmt-timestamp-uptime" ] }
embassy-rp = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy", rev = "45797ecb8501d7a22c53967fad45ee7490424991", features = [ "defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040" ] }
embassy-usb-logger = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy", rev = "45797ecb8501d7a22c53967fad45ee7490424991" }
embassy-futures = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", rev = "45797ecb8501d7a22c53967fad45ee7490424991" }
panic-probe = { version = "1.0.0", features = [ "print-defmt" ] }
cortex-m = { version = "0.7.6", features = [ "inline-asm" ] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"

defmt-rtt = "1.0.0"
log = { version = "0.4", optional = true }
defmt-or-log = "0.2.3"
defmt = { version = "1.0.1", optional = true }
micromath = "2.1.0"
tmc2209 = "0.2.2"
pio-proc = "0.3.0"
pio = "0.3.0"
fixed = "1.28.0"
embedded-hal = "0.2"
